[gd_scene load_steps=7 format=2]

[ext_resource path="res://Kasuki Hand Normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Panel.gd" type="Script" id=2]
[ext_resource path="res://ItemList.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 3
outline_color = Color( 0, 0, 0, 0.392157 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="ButtonGroup" id=3]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 480.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 90.0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 100.0
margin_right = 1000.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 32.0
rect_min_size = Vector2( 900, 32 )
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 900.0
margin_bottom = 36.0

[node name="Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 46.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Button4")
focus_neighbour_top = NodePath("../Button4")
focus_neighbour_right = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../Button2")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button4")
group = SubResource( 3 )
text = "> Yes"
flat = true

[node name="Button2" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 50.0
margin_right = 96.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Button")
focus_neighbour_top = NodePath("../Button")
focus_neighbour_right = NodePath("../Button3")
focus_neighbour_bottom = NodePath("../Button3")
focus_next = NodePath("../Button3")
focus_previous = NodePath("../Button")
group = SubResource( 3 )
text = "> Yes"
flat = true

[node name="Button3" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 100.0
margin_right = 146.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Button2")
focus_neighbour_top = NodePath("../Button2")
focus_neighbour_right = NodePath("../Button4")
focus_neighbour_bottom = NodePath("../Button4")
focus_next = NodePath("../Button4")
focus_previous = NodePath("../Button2")
group = SubResource( 3 )
text = "> Yes"
flat = true

[node name="Button4" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 100.0
margin_right = 146.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Button3")
focus_neighbour_top = NodePath("../Button3")
focus_neighbour_right = NodePath("../Button")
focus_neighbour_bottom = NodePath("../Button")
focus_next = NodePath("../Button")
focus_previous = NodePath("../Button3")
group = SubResource( 3 )
text = "> Yes"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 44.0
margin_bottom = 34.0
theme = SubResource( 2 )
text = "Day"

[node name="ItemList" type="ItemList" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
theme = SubResource( 2 )
allow_reselect = true
allow_rmb_select = true
max_columns = 2
same_column_width = true
script = ExtResource( 3 )
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Button" to="Panel" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Button2" to="Panel" method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Button3" to="Panel" method="_on_Button3_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Button4" to="Panel" method="_on_Button4_pressed"]
